--- a/css/project.css
+++ b/css/project.css
@@ -160,64 +160,98 @@ h2,h3,h4{
 }
 
 
-#our-offer{
-    line-height: 31.62px;
-    padding: 90px 116.6px 90px 116.4px;
-    background-color:#F8F8F8;
-    color: #686868;
-    border:transparent 2px solid;
-}
-.left-hand{
-    float: left;
-    width: 48%;
-    margin: 0;
-    padding: 50px 40px 40px 10px;
-    ;
-}
-.left-hand p{
-    font-size: 17px;
-    
-}
-.right-hand{
-    float: right;
-    width: 46%;
-}
-.right-hand img{
-    width: 100%;
-}
+        #our-offer{
+            line-height: 31.62px;
+            padding: 90px 116.6px 90px 116.4px;
+            background-color:#F8F8F8;
+            color: #686868;
+            border:transparent 2px solid;
+            overflow: hidden;
+        }
+        .left-hand{
+            float: left;
+            width: 48%;
+            margin: 0;
+            padding: 50px 40px 40px 10px;
+            animation: fadeInLeft 1s ease;
+        }
+        .left-hand p{
+            font-size: 17px;
+            transition: transform 0.3s ease;
+        }
+        .left-hand p:hover {
+            transform: translateX(5px);
+        }
+        .right-hand{
+            float: right;
+            width: 46%;
+            animation: fadeInRight 1s ease;
+        }
+        .right-hand img{
+            width: 100%;
+            transition: transform 0.5s ease;
+            border-radius: 5px;
+        }
+        .right-hand img:hover {
+            transform: scale(1.03);
+        }
 
+        #our-baking{
+            background-color: rgb(244, 240, 235);
+            margin: 0px -25px;
+            padding: 70px 116.6px 50px 116.4px;
+            border:transparent 2px solid;
+            text-align: center;
+            color: #686868;
+            font-size: 17px;
+        }
+        .header-baking{
+            margin:10px 0px 60px;
+            animation: fadeInDown 1s ease;
+        }
+        .image{
+            width: 30%;
+            display: inline-block;
+            text-align: center;
+            animation: fadeInUp 1s ease;
+            transition: transform 0.3s ease;
+        }
+        .image:hover {
+            transform: translateY(-5px);
+        }
+        .image img{
+            width: 90%;
+            transition: transform 0.5s ease;
+            border-radius: 5px;
+        }
+        .image:hover img {
+            transform: scale(1.05);
+        }
+        .image p{
+           padding: 10px;
+           margin: 5px;
+           line-height: 31.62px;
+        }
 
-
-
-#our-baking{
-    background-color: rgb(244, 240, 235);
-    margin: 0px -25px;
-    padding: 70px 116.6px 50px 116.4px;
-    border:transparent 2px solid;
-    text-align: center;
-    color: #686868;
-    font-size: 17px;
-}
-
-.header-baking{
-    margin:10px 0px 60px;
-}
-
-.image{
-    width: 30%;
-    display: inline-block;
-    text-align: center;
-}
-.image img{
-    width: 90%;
-   
-}
-.image p{
-   padding: 10px;
-   margin: 5px;
-   line-height: 31.62px;
-}
-
+        @keyframes fadeInLeft {
+            from { opacity: 0; transform: translateX(-30px); }
+            to { opacity: 1; transform: translateX(0); }
+        }
+        
+        @keyframes fadeInRight {
+            from { opacity: 0; transform: translateX(30px); }
+            to { opacity: 1; transform: translateX(0); }
+        }
+        
+        @keyframes fadeInDown {
+            from { opacity: 0; transform: translateY(-30px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
 
 
 #location{
